# movie-review-sentiment-analysis

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  dvc.yaml  main.py  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: deploy_to_ecr.yaml
backend/: Dockerfile  main.py
data/processed/: .gitignore
frontend/: Dockerfile  app.py  requirements.txt
k8s/: backend_aws_eks.yaml  backend_minikube_local.yaml  frontend_minikube_local.yaml  service-monitor.yaml
notebooks/: exp1.ipynb  exp2.ipynb
scripts/: transition_to_production.py
src/connections/: s3_connection.py
src/data_tasks/: data_ingestion.py  data_preprocessing.py  download_model.py
src/exception/: __init__.py
src/logger/: __init__.py
src/model/: custom_pipeline.py  model_builder.py  model_evaluation.py  model_promotion.py
src/utils/: helper_functions.py
