[project]
name = "movie-review-sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagshub>=0.6.9",
    "lightgbm>=4.6.0",
    "mlflow>=3.11.1",
    "optimum[onnxruntime]>=2.1.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
    "spacy>=3.8.14",
    "structlog>=25.5.0",
    "sympy>=1.14.0",
    "torch>=2.11.0",
    "transformers>=4.57.6",
]

[dependency-groups]
dev = [
    "cookiecutter>=2.7.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]